--- a/static/map.html
+++ b/static/map.html
@@ -21,9 +21,9 @@ header {
     color: #000;
     padding: 1rem;
     font-weight: 600;
-    text-align: center;
     font-size: 1.5rem;
     position: relative;
+    box-shadow: 0 2px 3px rgba(0,0,0,0.1);
 }
 
 .back-button {
@@ -144,8 +144,8 @@ main {
 </head>
 <body>
     <header>
-        <a href="/" class="back-button">←</a>
-        자율 주행 모드
+        <!-- <a href="/" class="back-button">←</a> -->
+        이동 경로 지정
     </header>
 
     <main>
