--- a/static/map.html
+++ b/static/map.html
@@ -25,7 +25,13 @@ header {
     position: relative;
     box-shadow: 0 2px 3px rgba(0,0,0,0.1);
 }
-
+.title {
+            font-size: 1.5rem;
+            font-weight: bold;
+            margin: 0;
+            text-decoration: none;
+            color:black;
+        }
 .back-button {
     position: absolute;
     left: 1rem;
@@ -145,7 +151,7 @@ main {
 <body>
     <header>
         <!-- <a href="/" class="back-button">←</a> -->
-        이동 경로 지정
+        <a href="/" class="title">이동 경로 지정</a>
     </header>
 
     <main>
