--- a/static/control.html
+++ b/static/control.html
@@ -6,7 +6,6 @@
     <title>로봇 수동 조작</title>
     <style>
         body {
-            background-color: #f5f5f5;
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 20px;
@@ -27,9 +26,11 @@
             box-shadow: 0 2px 3px rgba(0,0,0,0.1);
         }
         .title {
-            font-size: 2rem;
+            font-size: 1.5rem;
             font-weight: bold;
             margin: 0;
+            text-decoration: none;
+            color:black;
         }
         .container {
             background-color: white;
@@ -76,7 +77,7 @@
 </head>
 <body>
     <div class="header">
-        <h1 class="title">PECO</h1>
+        <a href="/" class="title">로봇 수동 조작</a>
     </div>
     <div class="container">
         <div class="controls">
