--- a/static/control.html
+++ b/static/control.html
@@ -8,29 +8,29 @@
         body {
             font-family: 'Arial', sans-serif;
             margin: 0;
-            padding: 20px;
+            padding: 70px 20px 20px 20px;
             display: flex;
             justify-content: center;
             align-items: center;
             min-height: 100vh;
+            background-color: #f5f5f5;
         }
         .header {
             display: flex;
-            align-items: center;
-            position:absolute;
+            position: fixed;
+            top: 0;
+            justify-content: center;
             width: 100%;
-            top: 16px;
-            padding-bottom: .8rem;
-            padding-left: 1.5rem;
-            background-color: #fff;
-            box-shadow: 0 2px 3px rgba(0,0,0,0.1);
+            padding: 1rem 1.5rem;
+            z-index: 1000;
         }
         .title {
-            font-size: 1.5rem;
-            font-weight: bold;
+            font-size: 2rem;
+            font-weight: 600;
             margin: 0;
+            text-align: center;
             text-decoration: none;
-            color:black;
+            color: #2c3e50;
         }
         .container {
             background-color: white;
