--- a/static/index.html
+++ b/static/index.html
@@ -8,6 +8,7 @@
    <!-- Three.js 라이브러리들을 먼저 로드 -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
+   <script src="https://cdn.tailwindcss.com"></script>
    
    <style>
         body {
@@ -88,11 +89,11 @@
        }
    </style>
 </head>
-<body>
-   <div class="container">
-       <div class="header">
-           <h1 class="title">PECO</h1>
-       </div>
+<body class="bg-slate-50 min-h-screen">
+   <div class="container mx-auto px-4 py-8">
+       <h1 class="text-3xl md:text-4xl font-bold text-center text-slate-800 mb-8">
+           PECO
+       </h1>
        <div class="map-container">
            <div id="three-container"></div>
        </div>
