--- a/static/control.html
+++ b/static/control.html
@@ -13,7 +13,7 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background-color: #f5f5f5;
+            background-color: #f8fafc;
         }
         .header {
             display: flex;
